#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

#AC_PREREQ([2.68])
AC_INIT(grobot/robot.c)
#AC_CONFIG_SRCDIR(grobot/robot.c)
AM_INIT_AUTOMAKE(robot, 1.0)

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
#AC_CHECK_HEADERS([fcntl.h netinet/in.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
#AC_TYPE_SIZE_T

# Checks for library functions.
#AC_FUNC_MALLOC
#AC_CHECK_FUNCS([getcwd memset socket])

#AC_CONFIG_FILES(Makefile)
AC_OUTPUT(Makefile)
